# ohtu_palautusrepositorio

./: README.md
viikko2/poetry-web/: pyproject.toml
viikko3/login-robot/: log.html  output.xml  report.html
viikko3/login-robot/src/tests/: login.robot
viikko3/ohjelmistotuotanto-hy tehtavat main viikko3-hello-robot/: log.html  output.xml  report.html
viikko3/web-login/src/tests/: login.robot  resource.robot
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/tests/: kauppa_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/tennis/: .gitignore
viikko5/tennis/src/: tennis_game.py
